--- a/CleanArchitecture/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EmployeeDbConnection":
+      "Server=(LocalDB)\\MSSQLLocalDB;Database=Employee;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultipleActiveResultSets=True"
+  }
 }
