--- a/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
+++ b/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 	</ItemGroup>
 
   <ItemGroup>
