--- a/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
+++ b/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,10 @@
 
 	<ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <!--<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />-->
+    <!--<PackageReference Include="MediatR" Version="9.0.0" />-->
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
 	</ItemGroup>
 
   <ItemGroup>
