--- a/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
+++ b/CleanArchitecture/CleanArchitecture.Core/CleanArchitecture.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
