--- a/CleanArchitecture/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EmployeeDbConnection":
-      "Server=(LocalDB)\\MSSQLLocalDB;Database=Employee;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultipleActiveResultSets=True"
+      "Server=(LocalDB)\\MSSQLLocalDB;Database=Employees;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultipleActiveResultSets=True;"
   }
 }
